--- a/1erParcial/Proyecto/backend/book-service/Dockerfile
+++ b/1erParcial/Proyecto/backend/book-service/Dockerfile
@@ -1,13 +1,34 @@
-FROM openjdk:21-jdk-slim
+# Base image with Java 21
+FROM openjdk:21-jdk-slim as builder
 
-# Directorio de trabajo dentro del contenedor
+# Set working directory inside the container
 WORKDIR /app
 
-# Copia el archivo .jar generado por Maven al contenedor
-COPY target/book-service-*.jar book-service.jar
+# Copy the Maven wrapper and project files
+COPY mvnw .
+COPY .mvn .mvn
+COPY pom.xml .
 
-# Expone el puerto en el que el servicio estará disponible
+# Download Maven dependencies
+RUN ./mvnw dependency:go-offline
+
+# Copy the source code
+COPY src src
+
+# Build the application
+RUN ./mvnw package -DskipTests
+
+# Create a minimal image for the final application
+FROM openjdk:21-jdk-slim
+
+# Set working directory inside the container
+WORKDIR /app
+
+# Copy the application JAR file from the builder
+COPY --from=builder /app/target/books-service-0.0.1-SNAPSHOT.jar app.jar
+
+# Expose the service port
 EXPOSE 8082
 
-# Comando para ejecutar la aplicación
-ENTRYPOINT ["java", "-jar", "book-service.jar"]
+# Set the entry point for the container
+ENTRYPOINT ["java", "-jar", "app.jar"]
