--- a/1erParcial/Proyecto/backend/book-service/src/main/resources/application.yml
+++ b/1erParcial/Proyecto/backend/book-service/src/main/resources/application.yml
@@ -1,11 +1,21 @@
-spring:
-  datasource:
-    url: jdbc:postgresql://localhost:5432/book_service
-    username: postgres
-    password: admin1234
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
 server:
   port: 8082
+
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/books_service
+    username: postgres
+    password: admin1234
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update # Crea la base de datos y actualiza las tablas si no existen
+    show-sql: true     # Mostrar las consultas SQL en la consola
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+  application:
+    name: books-service
+
+logging:
+  level:
+    org.hibernate.SQL: debug
+    org.springframework: info
