--- a/loan-service/src/main/resources/application.yml
+++ b/loan-service/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   application:
     name: loan-service
   datasource:
-    url: jdbc:postgresql://localhost:5432/loan-service
+    url: jdbc:postgresql://loan-service:5432/loan-service
     username: postgres
     password: admin1234
     driver-class-name: org.postgresql.Driver
