--- a/book-service/Dockerfile
+++ b/book-service/Dockerfile
@@ -1,5 +1,6 @@
+#Dockerfile for book-service
 FROM openjdk:21-jdk-slim
 WORKDIR /app
 COPY target/*.jar app.jar
-EXPOSE 8080
+EXPOSE 8082
 ENTRYPOINT ["java", "-jar", "app.jar"]
