--- a/loan-service/Dockerfile
+++ b/loan-service/Dockerfile
@@ -1,5 +1,6 @@
+#Dockerfile for loan-service
 FROM openjdk:21-jdk-slim
 WORKDIR /app
 COPY target/*.jar app.jar
-EXPOSE 8080
+EXPOSE 8083
 ENTRYPOINT ["java", "-jar", "app.jar"]
