--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
         cors-configurations:
           '[/**]':
             allowedOrigins: 
-              - "http://api-gateway:3000"  # Origen del frontend
+              - "http://localhost:3000"  # Origen del frontend
             allowedMethods:
               - GET
               - POST
