--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,138 @@
 version: '3.9'
+
 services:
+  postgres:
+    image: postgres:15-alpine
+    container_name: postgres-db
+    environment:
+      POSTGRES_USER: roberth
+      POSTGRES_PASSWORD: admin1234
+      POSTGRES_DB: GestionUsuarios
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+      - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
+    ports:
+      - "5432:5432"
+    networks:
+      - app-network
+    restart: always
+
   eureka-server:
-    image: johny4473/eureka-server:1.0
+    build:
+      context: ./eureka-server
+      dockerfile: Dockerfile
+    image: johny4437/eureka-server:latest
+    container_name: eureka-server
     ports:
       - "8761:8761"
-
-  api-gateway:
-    image: johny4473/api-gateway:1.0
-    ports:
-      - "8080:8080"
+    networks:
+      - app-network
     depends_on:
-      - eureka-server
+      - postgres
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres-db:5432/GestionUsuarios
+      SPRING_DATASOURCE_USERNAME: roberth
+      SPRING_DATASOURCE_PASSWORD: admin1234
+    restart: always
 
-  user-service:
-    image: johny4473/user-service:1.0
+  user-server:
+    build:
+      context: ./user-server
+      dockerfile: Dockerfile
+    image: johny4437/user-server:latest
+    container_name: user-server
     ports:
       - "8081:8081"
+    networks:
+      - app-network
     depends_on:
       - eureka-server
+      - postgres
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres-db:5432/GestionUsuarios
+      SPRING_DATASOURCE_USERNAME: roberth
+      SPRING_DATASOURCE_PASSWORD: admin1234
+      EUREKA_SERVER_URL: http://eureka-server:8761/eureka
+    restart: always
 
-  book-service:
-    image: johny4473/book-service:1.0
+  book-server:
+    build:
+      context: ./book-server
+      dockerfile: Dockerfile
+    image: johny4437/book-server:latest
+    container_name: book-server
     ports:
       - "8082:8082"
+    networks:
+      - app-network
     depends_on:
       - eureka-server
+      - postgres
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres-db:5432/GestionUsuarios
+      SPRING_DATASOURCE_USERNAME: roberth
+      SPRING_DATASOURCE_PASSWORD: admin1234
+      EUREKA_SERVER_URL: http://eureka-server:8761/eureka
+    restart: always
 
-  loan-service:
-    image: johny4473/loan-service:1.0
+  loan-server:
+    build:
+      context: ./loan-server
+      dockerfile: Dockerfile
+    image: johny4437/loan-server:latest
+    container_name: loan-server
     ports:
       - "8083:8083"
+    networks:
+      - app-network
     depends_on:
       - eureka-server
+      - postgres
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres-db:5432/GestionUsuarios
+      SPRING_DATASOURCE_USERNAME: roberth
+      SPRING_DATASOURCE_PASSWORD: admin1234
+      EUREKA_SERVER_URL: http://localhost:8761/eureka
+    restart: always
+
+  api-gateway:
+    build:
+      context: ./api-gateway
+      dockerfile: Dockerfile
+    image: johny4437/api-gateway:latest
+    container_name: api-gateway
+    ports:
+      - "8080:8080"
+    networks:
+      - app-network
+    depends_on:
+      - user-server
+      - book-server
+      - loan-server
+      - eureka-server
+    environment:
+      EUREKA_SERVER_URL: http://localhost:8761/eureka
+    restart: always
 
   frontend:
-    image: johny4473/frontend:1.0
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    image: johny4437/frontend:latest
+    container_name: frontend
     ports:
-      - "80:80"
+      - "3000:80"
+    networks:
+      - app-network
+    depends_on:
+      - api-gateway
+    environment:
+      REACT_APP_API_URL: http://api-gateway:8080
+    restart: always
+
+volumes:
+  postgres-data:
+
+networks:
+  app-network:
+    driver: bridge
