--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -1,5 +1,6 @@
 FROM openjdk:21-jdk-slim
 WORKDIR /app
-COPY target/*.jar api-gateway.jar
-EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "api-gateway.jar"]
+COPY wait-for-it.sh /app/wait-for-it.sh
+COPY target/api-gateway-0.0.1-SNAPSHOT.jar app.jar
+RUN chmod +x /app/wait-for-it.sh
+CMD ["/app/wait-for-it.sh", "eureka-server:8761", "--", "java", "-jar", "app.jar"]
