--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,138 +1,126 @@
-version: '3.9'
+version: '3.8'
 
 services:
-  postgres:
-    image: postgres:15-alpine
-    container_name: postgres-db
+  database:
+    image: database:v1
+    container_name: database
+    build:
+      context: ./database
+      dockerfile: Dockerfile
     environment:
-      POSTGRES_USER: roberth
+      POSTGRES_DB: libreria
+      POSTGRES_USER: postgres
       POSTGRES_PASSWORD: admin1234
-      POSTGRES_DB: GestionUsuarios
-    volumes:
-      - postgres-data:/var/lib/postgresql/data
-      - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d libreria"]
+      interval: 10s
+      retries: 5
     networks:
-      - app-network
-    restart: always
+      - library-network
 
-  eureka-server:
+  user-service:
+    image: user-service:v1
+    container_name: user-service
     build:
-      context: ./eureka-server
+      context: ./user-service
       dockerfile: Dockerfile
-    image: johny4437/eureka-server:latest
-    container_name: eureka-server
-    ports:
-      - "8761:8761"
-    networks:
-      - app-network
-    depends_on:
-      - postgres
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres-db:5432/GestionUsuarios
-      SPRING_DATASOURCE_USERNAME: roberth
+      SPRING_DATASOURCE_URL: jdbc:postgresql://database:5432/libreria
+      SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: admin1234
-    restart: always
+    depends_on:
+      database:
+        condition: service_healthy
+    networks:
+      - library-network
 
-  user-server:
+  loan-service:
+    image: loan-service:v1
+    container_name: loan-service
     build:
-      context: ./user-server
+      context: ./loan-service
       dockerfile: Dockerfile
-    image: johny4437/user-server:latest
-    container_name: user-server
-    ports:
-      - "8081:8081"
-    networks:
-      - app-network
-    depends_on:
-      - eureka-server
-      - postgres
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres-db:5432/GestionUsuarios
-      SPRING_DATASOURCE_USERNAME: roberth
+      SPRING_DATASOURCE_URL: jdbc:postgresql://database:5432/libreria
+      SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: admin1234
-      EUREKA_SERVER_URL: http://eureka-server:8761/eureka
-    restart: always
+    depends_on:
+      database:
+        condition: service_healthy
+    networks:
+      - library-network
 
-  book-server:
+  book-service:
+    image: book-service:v1
+    container_name: book-service
     build:
-      context: ./book-server
+      context: ./book-service
       dockerfile: Dockerfile
-    image: johny4437/book-server:latest
-    container_name: book-server
-    ports:
-      - "8082:8082"
-    networks:
-      - app-network
-    depends_on:
-      - eureka-server
-      - postgres
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres-db:5432/GestionUsuarios
-      SPRING_DATASOURCE_USERNAME: roberth
+      SPRING_DATASOURCE_URL: jdbc:postgresql://database:5432/libreria
+      SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: admin1234
-      EUREKA_SERVER_URL: http://eureka-server:8761/eureka
-    restart: always
-
-  loan-server:
-    build:
-      context: ./loan-server
-      dockerfile: Dockerfile
-    image: johny4437/loan-server:latest
-    container_name: loan-server
-    ports:
-      - "8083:8083"
-    networks:
-      - app-network
     depends_on:
-      - eureka-server
-      - postgres
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres-db:5432/GestionUsuarios
-      SPRING_DATASOURCE_USERNAME: roberth
-      SPRING_DATASOURCE_PASSWORD: admin1234
-      EUREKA_SERVER_URL: http://localhost:8761/eureka
-    restart: always
+      database:
+        condition: service_healthy
+    networks:
+      - library-network
 
   api-gateway:
+    image: api-gateway:v1
+    container_name: api-gateway
     build:
       context: ./api-gateway
       dockerfile: Dockerfile
-    image: johny4437/api-gateway:latest
-    container_name: api-gateway
     ports:
       - "8080:8080"
-    networks:
-      - app-network
-    depends_on:
-      - user-server
-      - book-server
-      - loan-server
-      - eureka-server
     environment:
-      EUREKA_SERVER_URL: http://localhost:8761/eureka
-    restart: always
+      SPRING_APPLICATION_NAME: api-gateway
+    depends_on:
+      user-service:
+        condition: service_started
+      loan-service:
+        condition: service_started
+      book-service:
+        condition: service_started
+    networks:
+      - library-network
+
+  eureka-server:
+    image: eureka-server:v1
+    container_name: eureka-server
+    build:
+      context: ./eureka-server
+      dockerfile: Dockerfile
+    ports:
+      - "8761:8761"
+    depends_on:
+      api-gateway:
+        condition: service_started
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8761/actuator/health"]
+      interval: 15s
+      retries: 10
+      start_period: 30s
+    networks:
+      - library-network
 
   frontend:
+    image: frontend:v1
+    container_name: frontend
     build:
       context: ./frontend
       dockerfile: Dockerfile
-    image: johny4437/frontend:latest
-    container_name: frontend
     ports:
-      - "3000:80"
-    networks:
-      - app-network
+      - "3000:3000"
     depends_on:
-      - api-gateway
-    environment:
-      REACT_APP_API_URL: http://api-gateway:8080
-    restart: always
-
-volumes:
-  postgres-data:
+      eureka-server:
+        condition: service_healthy
+    networks:
+      - library-network
 
 networks:
-  app-network:
+  library-network:
     driver: bridge
