--- a/eureka-server/Dockerfile
+++ b/eureka-server/Dockerfile
@@ -1,5 +1,4 @@
 FROM openjdk:21-jdk-slim
 WORKDIR /app
-COPY target/*.jar eureka-server.jar
-EXPOSE 8761
-ENTRYPOINT ["java", "-jar", "eureka-server.jar"]
+COPY target/eureka-server-0.0.1-SNAPSHOT.jar app.jar
+ENTRYPOINT ["java", "-jar", "app.jar"]
